# FastCuda

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.codex/: README.md  config.toml  project.toml
.codex/agents/: README.md  env-investigator.md  kernel-architect.md  kernel-optimizer.md  perf-analyst.md
.codex/hooks/: post-benchmark.toml  pre-benchmark.toml  pre-profile.toml
.codex/instructions/: cuda-rules.md  perf-rules.md  project-scope.md
.codex/prompts/: README.md  implement-flashattention-kernel.md  implement-gemm-kernel.md
.codex/rules/: remote-and-install.rules
.codex/skills/: README.md
.codex/skills/benchmark-harness/: SKILL.md
.codex/skills/cuda-env-audit/: SKILL.md
.codex/skills/flashattention-kernel-design/: SKILL.md
.codex/skills/gemm-kernel-design/: SKILL.md
.codex/skills/ncu-profiling/: SKILL.md
.codex/skills/nsys-timeline/: SKILL.md
.codex/skills/roofline-analysis/: SKILL.md
.codex/tools/: README.md
benchmarks/: bench_main.cu
configs/: benchmark-defaults.json  device-profiles.json
docs/: agent-workflow.md  architecture.md  codex-configuration.md  gemm_optimization.md  gemm_optimization.zh-CN.md  reduce_optimization.md  reduce_optimization.zh-CN.md
docs/prompts/: README.md  benchmark-kernel.md  investigate-environment.md  optimize-kernel.md
examples/: gemm_example.cpp  hgemm_example.cpp  reduce_example.cpp
include/fastcuda/: export.h  fastcuda.h  fastcuda.hpp  gemm.h  gemm.hpp  reduce.h  reduce.hpp  runtime.h  runtime.hpp  types.h  version.hpp.in
python/: fastcuda_python.cpp  setup.py
scripts/env/: probe-env.ps1
scripts/hooks/: post-benchmark.ps1  pre-benchmark.ps1  pre-profile.ps1
scripts/perf/: profile-ncu.ps1  profile-nsys.ps1  run-benchmark.ps1
src/common/: cuda_check.h
src/fastcuda/: export.hpp  gemm.cu  gemm.hpp  gemm_c.h  runtime.cu  runtime.hpp  version.hpp.in
src/gemm/: gemm_api.cu  gemm_internal.h  gemm_v1_naive.cu  gemm_v2_shared.cu  gemm_v3_register.cu  gemm_v4_warp.cu  gemm_v5_tf32.cu  gemm_v6_hgemm.cu
src/reduce/: reduce_api.cu  reduce_internal.h  reduce_v0_baseline.cu  reduce_v1_no_divergence.cu  reduce_v2_no_bank_conflict.cu  reduce_v3_add_during_load.cu  reduce_v4_unroll_last_warp.cu  reduce_v5_completely_unroll.cu  reduce_v6_multi_add.cu  reduce_v7_shuffle.cu
src/runtime/: runtime.cu
templates/: benchmark-report.md  optimization-note.md
